tests/error/failAnd.sk
int main(){
    int x=1 && "error"
    return 0;
}